--- a/src/pages/common/Home.module.scss
+++ b/src/pages/common/Home.module.scss
@@ -111,6 +111,7 @@
                     height: 18px;
                     margin-left: 4px;
                     margin-right: 20px;
+                    border: 1px solid #aaa;
                   }
                 }
               }
