--- a/src/pages/common/Home.module.scss
+++ b/src/pages/common/Home.module.scss
@@ -8,6 +8,52 @@
       background-color: #888;
       max-width: 1280px;
       height: 178px;
+      position: relative;
+      border-radius: 5px;
+      & > div {
+        position: absolute;
+      }
+      .opacity {
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        border-radius: 5px;
+        mask-image: linear-gradient(
+          to top,
+          rgba(0, 0, 0, 0.4) 0%,
+          rgba(0, 0, 0, 0) 60%
+        );
+      }
+      .content {
+        left: 20px;
+        bottom: 16px;
+        color: #fafafa;
+        & > button {
+          color: #fafafa;
+          background-color: #6269f5;
+          border: 1px solid #fafafa;
+          border-radius: 5px;
+          padding: 8px 16px;
+          cursor: pointer;
+          margin-bottom: 4px;
+        }
+      }
+    }
+    .banner_main {
+      background: url(@/assets/images/banner_main.png) no-repeat center;
+      background-size: cover;
+    }
+    .banner_renewal {
+      background: url(@/assets/images/banner_renewal_event.png) no-repeat center;
+      background-size: cover;
+    }
+    .banner_community {
+      background: url(@/assets/images/banner_community.png) no-repeat center;
+      background-size: cover;
+    }
+    .banner_training {
+      background: url(@/assets/images/banner_training.png) no-repeat center;
+      background-size: cover;
     }
   }
   .content_wrap {
@@ -196,6 +242,7 @@
         .header {
           flex-direction: row;
           justify-content: space-between;
+          align-items: center;
         }
         & > ul {
           margin-top: 20px;
@@ -227,6 +274,12 @@
               height: 24px;
               padding: 2px 8px;
               margin-top: 4px;
+              display: flex;
+              gap: 4px;
+              & > img {
+                width: 20px;
+                height: 20px;
+              }
             }
           }
         }
@@ -247,6 +300,7 @@
 @media screen and (min-width: 768px) {
   .home_wrap {
     margin-top: 80px;
+    margin-bottom: 80px;
     .banner_wrap {
       max-width: 1400px;
       width: 86%;
@@ -254,6 +308,11 @@
       padding: 0;
       .banner {
         height: 400px;
+        .content {
+          left: 40px;
+          bottom: 28px;
+          color: #fafafa;
+        }
       }
     }
     .content_wrap {
@@ -342,6 +401,14 @@
 
 @media screen and (min-width: 1280px) {
   .home_wrap {
+    .banner_wrap {
+      max-width: unset;
+      width: 100%;
+      .banner {
+        max-width: 1280px;
+        height: 320px;
+      }
+    }
     .content_wrap {
       max-width: 1280px;
       .review_wrap,
