--- a/src/pages/community/Community.module.scss
+++ b/src/pages/community/Community.module.scss
@@ -3,7 +3,43 @@
 .wrap {
   margin: 40px auto;
   .banner {
-    padding: 0 10%;
+    background-color: #888;
+    max-width: 1280px;
+    height: 178px;
+    position: relative;
+    border-radius: 5px;
+    & > div {
+      position: absolute;
+    }
+    .opacity {
+      width: 100%;
+      height: 100%;
+      background-color: #000;
+      border-radius: 5px;
+      mask-image: linear-gradient(
+        to top,
+        rgba(0, 0, 0, 0.4) 0%,
+        rgba(0, 0, 0, 0) 60%
+      );
+    }
+    .content {
+      left: 20px;
+      bottom: 16px;
+      color: #fafafa;
+      & > button {
+        color: #fafafa;
+        background-color: #6269f5;
+        border: 1px solid #fafafa;
+        border-radius: 5px;
+        padding: 8px 16px;
+        cursor: pointer;
+        margin-bottom: 4px;
+      }
+    }
+  }
+  .banner_community {
+    background: url(@/assets/images/banner_community.png) no-repeat center;
+    background-size: cover;
   }
   .weekly_wrap {
     padding: 0 10%;
@@ -106,7 +142,15 @@
     margin: 80px auto;
     width: 86%;
     .banner {
-      padding: 0;
+      height: 400px;
+      .content {
+        left: 40px;
+        bottom: 28px;
+        color: #fafafa;
+        & > h4 {
+          font-size: 2.8rem;
+        }
+      }
     }
     .weekly_wrap {
       padding: 0;
