--- a/src/pages/mypage/Mypage.module.scss
+++ b/src/pages/mypage/Mypage.module.scss
@@ -53,14 +53,18 @@
           }
         }
         .gauge {
-          margin-top: 20px;
+          margin-top: 32px;
           .values {
             & > span {
-              font-size: 0;
               text-wrap: nowrap;
             }
-            & > span:hover {
-              font-size: unset;
+            .score {
+              position: absolute;
+              bottom: 12px;
+              color: #fafafa;
+              background-color: #6269f5;
+              border-radius: 5px;
+              padding: 2px 8px;
             }
           }
           .range {
@@ -505,6 +509,31 @@
           }
         }
       }
+      .post_none {
+        display: flex;
+        height: 100%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        & > p {
+          color: #888;
+        }
+        & > button {
+          color: #6269f5;
+          cursor: pointer;
+          border: 1px solid #aaa;
+          border-radius: 3px;
+          background-color: #fafafa;
+          height: 48px;
+          padding: 0 32px;
+          margin-top: 20px;
+        }
+        & > button:hover {
+          background-color: #6269f5;
+          color: #fff;
+          border: #6269f5;
+        }
+      }
     }
   }
 }
@@ -653,6 +682,31 @@
             gap: 4px;
             align-items: center;
           }
+        }
+      }
+      .review_none {
+        display: flex;
+        height: 100%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        & > p {
+          color: #888;
+        }
+        & > button {
+          color: #6269f5;
+          cursor: pointer;
+          border: 1px solid #aaa;
+          border-radius: 3px;
+          background-color: #fafafa;
+          height: 48px;
+          padding: 0 32px;
+          margin-top: 20px;
+        }
+        & > button:hover {
+          background-color: #6269f5;
+          color: #fff;
+          border: #6269f5;
         }
       }
     }
@@ -810,6 +864,12 @@
             }
           }
         }
+        .post_none {
+          & > button {
+            padding: 0 40px;
+            height: 54px;
+          }
+        }
       }
     }
   }
@@ -822,6 +882,12 @@
             .score_detail {
               flex-direction: column;
             }
+          }
+        }
+        .review_none {
+          & > button {
+            padding: 0 40px;
+            height: 54px;
           }
         }
       }
