--- a/src/pages/common/Home.module.scss
+++ b/src/pages/common/Home.module.scss
@@ -323,6 +323,8 @@
       .community_wrap {
         margin-top: 120px;
         .header {
+          flex-direction: row;
+          flex-wrap: nowrap;
           .tab_wrap {
             .btn_more {
               font-size: 1.8rem;
