--- a/src/pages/review/Search.module.scss
+++ b/src/pages/review/Search.module.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 .search_wrap {
-  margin: 80px auto;
+  margin: 40px auto 80px;
   width: 80%;
   .filter_wrap {
     .header {
@@ -250,6 +250,7 @@
 
 @media screen and (min-width: 768px) {
   .search_wrap {
+    margin-top: 80px;
     width: 86%;
     .filter_wrap {
       .header {
