--- a/src/pages/community/Community.module.scss
+++ b/src/pages/community/Community.module.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 .wrap {
-  margin: 40px auto;
+  margin: 40px auto 80px;
   .banner {
     background-color: #888;
     max-width: 1280px;
@@ -139,7 +139,7 @@
 
 @media screen and (min-width: 768px) {
   .wrap {
-    margin: 80px auto;
+    margin-top: 80px;
     width: 86%;
     .banner {
       height: 400px;
