--- a/src/pages/review/Write.module.scss
+++ b/src/pages/review/Write.module.scss
@@ -31,7 +31,7 @@ select {
 }
 
 .write_training_wrap {
-  margin: 80px auto;
+  margin: 0 auto 80px;
   .corp_info {
     background-color: #6269f5;
     padding: 40px 10%;
@@ -200,7 +200,7 @@ select {
 }
 
 .write_working_wrap {
-  margin: 80px auto;
+  margin: 0 auto 80px;
   .corp_info {
     background-color: #6269f5;
     padding: 40px 10%;
@@ -402,6 +402,7 @@ select {
 
 @media screen and (min-width: 768px) {
   .write_training_wrap {
+    margin-top: 80px;
     width: 86%;
     .corp_info {
       padding: 40px;
@@ -458,6 +459,7 @@ select {
   }
 
   .write_working_wrap {
+    margin-top: 80px;
     width: 86%;
     .corp_info {
       padding: 40px;
