--- a/src/pages/community/Search.module.scss
+++ b/src/pages/community/Search.module.scss
@@ -173,6 +173,7 @@
           -webkit-box-orient: vertical;
           overflow: hidden;
           text-overflow: ellipsis;
+          word-break: break-all;
           cursor: pointer;
         }
         .reaction {
@@ -250,6 +251,7 @@
               -webkit-box-orient: vertical;
               overflow: hidden;
               text-overflow: ellipsis;
+              word-break: break-all;
               cursor: pointer;
             }
             .reaction {
