--- a/src/pages/community/Community.module.scss
+++ b/src/pages/community/Community.module.scss
@@ -108,6 +108,7 @@
         overflow: hidden;
         text-overflow: ellipsis;
         cursor: pointer;
+        word-break: break-all;
       }
       .reaction {
         display: flex;
