--- a/src/pages/review/Search.module.scss
+++ b/src/pages/review/Search.module.scss
@@ -189,6 +189,7 @@
               text-overflow: ellipsis;
               -webkit-line-clamp: 2;
               -webkit-box-orient: vertical;
+              word-break: break-all;
               & > span {
                 margin-right: 12px;
                 white-space: nowrap;
@@ -200,6 +201,7 @@
               text-overflow: ellipsis;
               -webkit-line-clamp: 2;
               -webkit-box-orient: vertical;
+              word-break: break-all;
               & > span {
                 margin-right: 8px;
                 white-space: nowrap;
