--- a/src/pages/community/Search.module.scss
+++ b/src/pages/community/Search.module.scss
@@ -155,6 +155,7 @@
           align-items: center;
           & > img:nth-of-type(1) {
             width: 18px;
+            height: 18px;
           }
           & > span {
             display: flex;
@@ -233,6 +234,7 @@
               align-items: center;
               & > img:nth-of-type(1) {
                 width: 18px;
+                height: 18px;
               }
               & > span {
                 display: flex;
@@ -350,6 +352,7 @@
           .info {
             & > img:nth-of-type(1) {
               width: 26px;
+              height: 26px;
             }
           }
         }
@@ -414,6 +417,7 @@
               .info {
                 & > img:nth-of-type(1) {
                   width: 26px;
+                  height: 26px;
                 }
               }
             }
