--- a/src/pages/common/Home.module.scss
+++ b/src/pages/common/Home.module.scss
@@ -3,7 +3,10 @@
 .home_wrap {
   margin: 40px auto 80px;
   .banner_wrap {
-    padding: 0 10%;
+    max-width: 1400px;
+    width: 86%;
+    margin: 0 auto;
+    padding: 0;
     .banner {
       background-color: #888;
       max-width: 1280px;
@@ -57,7 +60,9 @@
     }
   }
   .content_wrap {
-    padding: 0 10%;
+    width: 86%;
+    margin: 0 auto;
+    padding: 0;
     .review_wrap,
     .community_wrap {
       margin-top: 80px;
@@ -119,12 +124,14 @@
           .item {
             margin-top: 20px;
             .type {
-              width: fit-content;
+              width: 94px;
               padding: 2px 8px;
               border: 1px solid #aaa;
               border-radius: 5px;
               color: #aaa;
               height: 26px;
+              text-wrap: nowrap;
+              text-align: center;
             }
             .content {
               margin-top: 8px;
@@ -191,12 +198,14 @@
             .item {
               margin-top: 20px;
               .type {
-                width: fit-content;
+                width: 68px;
                 padding: 2px 8px;
                 border: 1px solid #aaa;
                 border-radius: 5px;
                 color: #aaa;
                 height: 26px;
+                text-align: center;
+                text-wrap: nowrap;
               }
               .content {
                 margin-top: 8px;
@@ -291,8 +300,9 @@
     }
   }
   .bottom_banner {
-    margin-top: 60px;
-    margin: 60px 10%;
+    margin: 60px auto;
+    max-width: 1280px;
+    width: 86%;
     background-color: #aaa;
     height: 178px;
   }
@@ -305,10 +315,6 @@
   .home_wrap {
     margin-top: 80px;
     .banner_wrap {
-      max-width: 1400px;
-      width: 86%;
-      margin: 0 auto;
-      padding: 0;
       .banner {
         height: 400px;
         .content {
@@ -319,9 +325,6 @@
       }
     }
     .content_wrap {
-      width: 86%;
-      margin: 0 auto;
-      padding: 0;
       .review_wrap,
       .community_wrap {
         margin-top: 120px;
@@ -402,11 +405,6 @@
           }
         }
       }
-    }
-    .bottom_banner {
-      margin: 60px auto;
-      max-width: 1280px;
-      width: 86%;
     }
   }
 }
