--- a/src/pages/notice/View.module.scss
+++ b/src/pages/notice/View.module.scss
@@ -11,9 +11,10 @@
     letter-spacing: -0.04em;
   }
   margin: 0 auto 80px;
+  width: 86%;
   .topic {
     margin-top: 20px;
-    padding: 20px 10%;
+    padding: 20px 0;
     .gray {
       color: #aaa;
     }
@@ -27,7 +28,6 @@
   }
   .content_wrap {
     margin: 20px 0;
-    padding: 0 10%;
     .post_wrap {
       .post_header {
         padding-bottom: 20px;
@@ -143,7 +143,6 @@
       font-size: 1.8rem;
     }
     margin-top: 80px;
-    width: 86%;
     .topic {
       padding: 20px 40px;
       border: 1px solid #aaa;
