--- a/src/pages/common/Home.module.scss
+++ b/src/pages/common/Home.module.scss
@@ -351,6 +351,7 @@
               gap: 8px;
               overflow: hidden;
               .type {
+                width: 105px;
                 flex-shrink: 0;
                 height: 29px;
               }
