--- a/src/components/comments/Comments.module.scss
+++ b/src/components/comments/Comments.module.scss
@@ -112,6 +112,9 @@
               color: #fafafa;
             }
           }
+          .comment_content {
+            word-break: break-all;
+          }
           .likes {
             margin-top: 4px;
             display: flex;
