--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -5,9 +5,7 @@
 
 footer {
   width: 100%;
-  height: 220px;
-  margin-bottom: 50px;
-
+  padding-bottom: 50px;
   .footer_wrap {
     display: flex;
     width: 86%;
@@ -19,15 +17,12 @@ footer {
     padding: 20px 0;
     border-bottom: 1px solid rgba(0, 13, 255, 0.1);
     & > div {
-      max-width: 350px;
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
       align-items: center;
+      flex-wrap: wrap;
       height: auto;
-      & > a {
-        font-size: 1.4rem;
-      }
+      gap: 8px 32px;
     }
   }
 
@@ -60,7 +55,7 @@ footer {
     align-items: end;
     flex-wrap: wrap;
     height: auto;
-    padding: 20px 0;
+    padding: 20px 0 10px;
     row-gap: 10px;
     & > span {
       font-size: 1.4rem;
@@ -78,6 +73,18 @@ footer {
         margin-right: 5px;
         width: 15px;
         vertical-align: middle;
+      }
+    }
+  }
+}
+
+/* mobile-end */
+
+@media screen and (min-width: 768px) {
+  footer {
+    .footer_terms {
+      & > div {
+        gap: 8px 36px;
       }
     }
   }
