--- a/src/pages/common/Home.module.scss
+++ b/src/pages/common/Home.module.scss
@@ -50,6 +50,10 @@
       background: url(@/assets/images/banner_renewal_event.png) no-repeat center;
       background-size: cover;
     }
+    .banner_needuchat {
+      background: url(@/assets/images/banner_needuchat.png) no-repeat center;
+      background-size: cover;
+    }
     .banner_community {
       background: url(@/assets/images/banner_community.png) no-repeat center;
       background-size: cover;
