--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -322,6 +322,7 @@ header {
     }
   }
 }
+
 @media screen and (min-width: 1280px) {
   header {
     .header_wrap {
@@ -331,6 +332,9 @@ header {
       .gnb_wrap {
         .gnb {
           margin-left: 100px;
+          li {
+            margin-right: 30px;
+          }
         }
       }
     }
