update: training write page

--- a/src/pages/review/Write.module.scss
+++ b/src/pages/review/Write.module.scss
@@ -70,6 +70,7 @@ select {
     width: 86%;
     margin: 0 auto;
     margin-top: 80px;
+    position: relative;
     input,
     select,
     textarea {
