--- a/src/components/modal/Modal.module.scss
+++ b/src/components/modal/Modal.module.scss
@@ -107,6 +107,26 @@
   // }
 }
 
+.more_review_action_ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 28px;
+  & > li {
+    display: flex;
+    flex-direction: row;
+    padding: 16px 10px;
+    gap: 10px;
+    border-radius: 5px;
+    & > div:nth-of-type(1) {
+      & > img {
+        margin-top: 10px;
+        width: 24px;
+      }
+    }
+  }
+}
+
 /* mobile-end */
 
 @media screen and (min-width: 768px) {
@@ -149,6 +169,13 @@
           font-size: 1.4rem;
         }
       }
+    }
+  }
+  .more_review_action_ul {
+    margin-top: 40px;
+    & > li {
+      padding: 20px;
+      gap: 20px;
     }
   }
 }
