--- a/src/pages/review/Detail.module.scss
+++ b/src/pages/review/Detail.module.scss
@@ -18,10 +18,23 @@
       color: #fafafa;
     }
   }
+  .write_review {
+    margin-top: 40px;
+    background-color: #efefef;
+    padding: 20px 28px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+    p {
+      margin-top: 8px;
+      word-break: keep-all;
+    }
+  }
   section {
     width: 86%;
     margin: 0 auto;
-    margin-top: 80px;
+    margin-top: 40px;
     .tab {
       display: flex;
       flex-direction: row;
@@ -77,30 +90,6 @@
                 color: #888;
               }
             }
-          }
-        }
-      }
-      .write_review {
-        min-width: 294px;
-        border: 1px solid #aaa;
-        border-radius: 5px;
-        background-color: #fff;
-        padding: 76px 60px;
-        text-align: center;
-        & > p {
-          text-align: center;
-          word-break: keep-all;
-        }
-        & > button {
-          margin-top: 40px;
-          padding: 19px 40px;
-          border: 1px solid #aaa;
-          border-radius: 3px;
-          background-color: #fafafa;
-          cursor: pointer;
-          white-space: nowrap;
-          & > a {
-            color: #6269f5;
           }
         }
       }
@@ -256,6 +245,13 @@
         line-height: 56px;
       }
     }
+    .write_review {
+      border: 1px solid #aaa;
+      border-radius: 5px;
+      padding: 40px;
+      flex-direction: row;
+      justify-content: space-between;
+    }
     section {
       width: 100%;
       .tab {
@@ -327,8 +323,5 @@
 @media screen and (min-width: 1490px) {
   .summary_wrap {
     flex-direction: row !important;
-  }
-  .write_review {
-    max-width: 294px !important;
   }
 }
